--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,49 @@ services:
     image: ghcr.io/nmoral/docker-symfony:6.0-php-8.1-dev
     volumes:
       - .:/application
+    network_mode: bridge
+    links:
+      - mysql
+
+  webserver:
+    image: nginx:alpine
+    container_name: ${PROJECT_NAME}-webserver
+    working_dir: /application
+    extra_hosts:
+      - "localhost:host-gateway"
+    links:
+      - app
+    volumes:
+      - .:/application
+      - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    environment:
+      - VIRTUAL_HOST=${PROJECT_NAME}.local
+    network_mode: bridge
+
+
+
+  mysql:
+    image: mysql:5.6
+    container_name: ${PROJECT_NAME}-mysql
+    volumes:
+      - ./var/docker/database:/var/lib/mysql
+    environment:
+      - MYSQL_DATABASE=${DB_NAME}
+      - MYSQL_USER=${DB_USERNAME}
+      - MYSQL_PASSWORD=${DB_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+    network_mode: bridge
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: ${PROJECT_NAME}-phpmyadmin
+    environment:
+      - VIRTUAL_HOST=phpmyadmin.${PROJECT_NAME}.local
+      - MYSQL_USERNAME=${DB_USERNAME}
+      - MYSQL_PASSWORD=${DB_PASSWORD}
+      - PMA_USERNAME=${DB_USERNAME}
+      - PMA_PASSWORD=${DB_PASSWORD}
+      - PMA_HOSTS=mysql
+    links:
+      - mysql
+    network_mode: bridge
