--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@ var
 .idea
 vendor
 .env
+.npm
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
